Fix loader visibility

--- a/dev/sass/_device_iphone_5.scss
+++ b/dev/sass/_device_iphone_5.scss
@@ -109,6 +109,9 @@ $height_device_iphone_4_max: 698;
 		display: block;
 		width: 100%;
 		max-width: 320px;
+		position: relative;
+		z-index: 0;
+
 	}
 	&:before, &:after {
 		content: '';
